--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<html><head>
+<html
+style="background :burlywood"><head>
 	<title></title>
 <style type="text/css" media="screen">
 	* {
 
-		background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&_nc_ht=instagram.fixc4-1.fna.fbcdn.net&_nc_ohc=HoFy-u6CVn0AX9hVkxO&edm=ABfd0MgAAAAA&ccb=7-4&oh=44a7465cef979d7369a425f3244bf3d6&oe=609DC7E4&_nc_sid=7bff83);
+		/* background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&_nc_ht=instagram.fixc4-1.fna.fbcdn.net&_nc_ohc=HoFy-u6CVn0AX9hVkxO&edm=ABfd0MgAAAAA&ccb=7-4&oh=44a7465cef979d7369a425f3244bf3d6&oe=609DC7E4&_nc_sid=7bff83); */
 	}
 	::selection {
 		background : red;
@@ -17,7 +18,7 @@
     font-size: 2pc;
     color: antiquewhite;
 "> Note if:: we should not post this details in phpadmin |||| Data is secure ||||</h3>
-	<h1 style="background: bisque;margin-left: 10pc;"> Confirm </h1>
+	<h1 style="background: #70ff03;margin-left: 10pc;"> Confirm </h1>
 	<div class="form-inner">
 		<form action="indexx.html" method="get" accept-charset="utf-8">
 
@@ -30,7 +31,7 @@
 			
 				<input type="text" name="Name" value="" placeholder="Person" maxlength="10" required="" minlength="6" style="
     font-size: 4pc;
-    background: red;
+    background: antiquewhite;
     color: aqua;
 ">
 				
@@ -59,8 +60,8 @@
 	</div>
 
 <h6 style="
-    font-size: 5pc;
-"> Only for Entertainment</h6>
+    font-size: 5pc; background :beige
+"> WEBSITE COPYRIGHT :UNDER SECTION 2007 THIS WEBSITE ONLY for FAIR USE SUCH AS EDUCATIONAL PURPOSES</h6>
 <div class="" style="background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&_nc_ht=instagram.fixc4-1.fna.fbcdn.net&_nc_ohc=HoFy-u6CVn0AX9hVkxO&edm=ABfd0MgAAAAA&ccb=7-4&oh=44a7465cef979d7369a425f3244bf3d6&oe=609DC7E4&_nc_sid=7bff83)">
 
 	
