--- a/143.html
+++ b/143.html
@@ -6,6 +6,6 @@
 <body>
 <a href="soon.htm" title="View Source"><h1>  Yarr Msg Toh kara karo na </h1></a>
 <h6> Only 2 page left then we show source code normal</h6>
-<iframe src="defa.mp4" frameborder="0" width="320" height="320" allow="" frameborder="0"></iframe>
+<video autoplay="" controls="" name="media"><source src="file:///C:/Users/HP/Desktop/ss/defas.mp4" type="video/mp4"></video>
 </body>
 </html>
