--- a/bolo.html
+++ b/bolo.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style>
+		* {
+			background-color: black;
+			color: aquamarine;
+		}
+	</style>
 	<title>Bolo Kush toh</title>
 </head>
 <body>
