--- a/dils.html
+++ b/dils.html
@@ -1,10 +1,19 @@
-<html><head></head><body><video controls="" title="Rajput" autoplay="" name="media"><source src="file:///C:/Users/HP/Desktop/ss/link.mp4" aria-controls="none" type="video/mp4"></video>
-
-
+<html><head>
+    <style>
+        * {
+            background-image: url(post.png);
+        }
+    </style>
+</head><body><video controls="" title="Rajput" autoplay="" name="media"><source src="file:///C:/Users/HP/Desktop/ss/link.mp4" aria-controls="none" type="video/mp4"></video>
+ 
     <h2 style="
     background: antiquewhite;
     color: brown;
 ">
         We are Under Maintainance
-    </h2>
+    </h2>   <div class="" style="background-image: url(post.png)">
+
+	
+    </div>
+
 </body></html>
