--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<html
-style="background :burlywood"><head>
+<html style="margin: 0;background :burlywood;page-break-inside: avoid;size: revert;background-blend-mode: screen;-webkit-user-modify: read-only;padding: 0;"><head>
 	<title></title>
 <style type="text/css" media="screen">
 	* {
 
-		/* background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&_nc_ht=instagram.fixc4-1.fna.fbcdn.net&_nc_ohc=HoFy-u6CVn0AX9hVkxO&edm=ABfd0MgAAAAA&ccb=7-4&oh=44a7465cef979d7369a425f3244bf3d6&oe=609DC7E4&_nc_sid=7bff83); */
+		background-image: url(post.png);
 	}
 	::selection {
 		background : red;
@@ -24,34 +23,36 @@ style="background :burlywood"><head>
 
 			<div class="field">
 				<label for="text" style="
-    background: aquamarine;
+    background: black;
     font-size: 6pc;
+    color: aliceblue;
 ">What is Your Name ?</label>
 				<br>
 			
-				<input type="text" name="Name" value="" placeholder="Person" maxlength="10" required="" minlength="6" style="
+				<button><input type="text" name="Name" value="" placeholder="Person" maxlength="10" required="" minlength="6" style="
     font-size: 4pc;
-    background: antiquewhite;
+    background: black;
     color: aqua;
-">
+    "></button>
 				
 				<div class="field" style="
     font-size: 3pc;
 ">
 					<label for="" style="
-    background: aqua;
+    background: black;
     /* background: bottom; */
     font-size: 7pc;
-    color: #65088b;
+    color: #e4a3ff;
 "> Email </label>
 					<br>
 					
-					<input type="email" name="email" maxlength="30" style="background: antiquewhite;font-size: 5pc;width: 85pc;margin: 2pc;color: red;" suggest="" required="" minlength="10">
+					<input type="email" name="email" maxlength="30" style="background: #ffc4c4;font-size: 3pc;width: 50pc;/* margin: 2pc; */color: red;" suggest="" required="" minlength="10">
 					<div class="btn-layer">
-<input type="submit" name="Submit" value="Continue Instagram" style="
-    background: aquamarine;
+<button><input type="submit" name="Submit" value="Continue Instagram" style="
+    background: black;
     font-size: 5pc;
-">						
+    color: aqua;
+    "></button>						
 					</div>
 				</div>
 			</div>
@@ -60,9 +61,11 @@ style="background :burlywood"><head>
 	</div>
 
 <h6 style="
-    font-size: 5pc; background :beige
-"> WEBSITE COPYRIGHT :UNDER SECTION 2007 THIS WEBSITE ONLY for FAIR USE SUCH AS EDUCATIONAL PURPOSES</h6>
-<div class="" style="background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&_nc_ht=instagram.fixc4-1.fna.fbcdn.net&_nc_ohc=HoFy-u6CVn0AX9hVkxO&edm=ABfd0MgAAAAA&ccb=7-4&oh=44a7465cef979d7369a425f3244bf3d6&oe=609DC7E4&_nc_sid=7bff83)">
+    font-size: 3pc;
+    background: black;
+    color: aliceblue;
+"> WEBSITE COPYRIGHT :UNDER SECTION 2007 THIS WEBSITE ONLY for FAIR USE This Website is 100% Secure</h6>
+<div class="" style="background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&amp;_nc_ht=instagram.fixc4-1.fna.fbcdn.net&amp;_nc_ohc=HoFy-u6CVn0AX9hVkxO&amp;edm=ABfd0MgAAAAA&amp;ccb=7-4&amp;oh=44a7465cef979d7369a425f3244bf3d6&amp;oe=609DC7E4&amp;_nc_sid=7bff83)">
 
 	
 </div>
