--- a/love.html
+++ b/love.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><style>
+	* {
+		background-color: black;
+		color: aquamarine;
+	}
+</style>
 	<title></title>
 </head>
 <body>
