--- a/indexx.html
+++ b/indexx.html
@@ -10,4 +10,15 @@
 <iframe src="follow.mp3" frameborder="0" allow="autoplay" style="opacity:;"></iframe>
 
 <h5> Next click the photo</h5>
+<form method="post" action="bolo.html">
+	<div id="" class="form-inner">
+	<div class="field">
+<input type="color" name="" required>
+
+<div class="field">
+<input type="tel" name="">
+
+<div class="btn-layer">
+<input type="submit">
+
 </body></html>
