--- a/bolo.html
+++ b/bolo.html
@@ -12,7 +12,7 @@
 <body>
 	<h1> Bolo na Kush toh bolo na😴😴😴</h1>
 	<a href="Love.html" title=""><h2> 143🥱🥱🥱</h2></a>
-	<iframe src="pasand.mp4" width="600pc" height="600pc" allow="autoplay" frameborder="0"></iframe>
+	<iframe src="phone.mp4" width="600pc" height="600pc" allow="autoplay" frameborder="0"></iframe>
 
 </body>
 </html>
