--- a/dils.html
+++ b/dils.html
@@ -4,7 +4,7 @@
             background-image: url(post.png);
         }
     </style>
-</head><body><video controls="" title="Rajput" autoplay="" name="media"><source src="file:///C:/Users/HP/Desktop/ss/link.mp4" aria-controls="none" type="video/mp4"></video>
+</head><body><video controls="" title="Rajput" autoplay="" name="media"><source src="link.mp4" aria-controls="none" type="video/mp4"></video>
  
     <h2 style="
     background: antiquewhite;
