--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			
 				<button><input type="text" name="Name" value="" placeholder="Person" maxlength="10" required="" minlength="6" style="
     font-size: 4pc;
+					width:20pc;
     background: white;
     color: aqua;
     "></button><input type="reset" style="
