--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     background: black;
     color: aliceblue;
 "> WEBSITE COPYRIGHT :UNDER SECTION 2007 THIS WEBSITE ONLY for FAIR USE This Website is 100% Secure</h6>
-<div class="" style="background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&amp;_nc_ht=instagram.fixc4-1.fna.fbcdn.net&amp;_nc_ohc=HoFy-u6CVn0AX9hVkxO&amp;edm=ABfd0MgAAAAA&amp;ccb=7-4&amp;oh=44a7465cef979d7369a425f3244bf3d6&amp;oe=609DC7E4&amp;_nc_sid=7bff83)">
+<!-- <div class="" style="background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&amp;_nc_ht=instagram.fixc4-1.fna.fbcdn.net&amp;_nc_ohc=HoFy-u6CVn0AX9hVkxO&amp;edm=ABfd0MgAAAAA&amp;ccb=7-4&amp;oh=44a7465cef979d7369a425f3244bf3d6&amp;oe=609DC7E4&amp;_nc_sid=7bff83)"> -->
 <video width="" height="" controls="" allow="autoplay" autoplay>
 	<source src="pasand.mp4" type="video/mp4" allow="autoplay">
 </video>
