--- a/bolo.html
+++ b/bolo.html
@@ -1,18 +1,29 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<style>
+<html width="device-width" height=""><head>
+	<script>[
+		{
+		  "url": "file:///C:/Users/HP/Desktop/ss/bolo.html",
+		  "ranges": [
+			{
+			  "start": 85,
+			  "end": 161
+			}
+		  ],
+		  "text": "<html width=\"device-width\" height=\"\"><head>\r\n\t<style content=\"width:device-width\">\r\n\t\t* {\r\n\t\t\tbackground-color: rgb(255, 255, 255);\r\n\t\t\tcolor: rgb(240, 14, 14);\r\n\t\t}\r\n\t</style>\r\n\t<title>Bolo Kush toh</title>\r\n\r\n</head>\r\n<body>\r\n\t<h1> Bolo na Kush toh bolo na😴😴😴</h1>\r\n\t<a href=\"Love.html\" title=\"love\"><h2> 143🥱🥱🥱</h2></a>\r\n\t<iframe src=\"phone.mp4\" width=\"600pc\" height=\"600pc\" allow=\"autoplay\" frameborder=\"0\"></iframe>\r\n\r\n\r\n</body></html>"
+		}
+	  ]</script>
+	<style content="width:device-width">
 		* {
-			background-color: black;
-			color: aquamarine;
+			background-color: rgb(255, 255, 255);
+			color: rgb(240, 14, 14);
 		}
 	</style>
 	<title>Bolo Kush toh</title>
+
 </head>
 <body>
 	<h1> Bolo na Kush toh bolo na😴😴😴</h1>
-	<a href="Love.html" title=""><h2> 143🥱🥱🥱</h2></a>
+	<a href="Love.html" title="love"><h2> 143🥱🥱🥱</h2></a>
 	<iframe src="phone.mp4" width="600pc" height="600pc" allow="autoplay" frameborder="0"></iframe>
 
-</body>
-</html>
+
+</body></html>
