--- a/143.html
+++ b/143.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
-<html>
-<head>
+<html style="
+    background: radial-gradient(black, transparent);
+    width: 10vh;
+    height: 10;
+"><head>
 	<title></title>
 </head>
-<body>
-<a href="soon.htm" title="View Source"><h1>  Yarr Msg Toh kara karo na </h1></a>
+<body style="background: radial-gradient(black, transparent);">
+<a href="soon.htm" title="View Source"><h1 style="
+    width: 100vh;
+">  Yarr Msg Toh kara karo na </h1></a>
 <h6> Only 2 page left then we show source code normal</h6>
 <video autoplay="" controls="" name="media"><source src="defas.mp4" type="video/mp4"></video>
-</body>
-</html>
+
+</body></html>
