--- a/Love.html
+++ b/Love.html
@@ -1,16 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head><style>
+<html style="
+    background: radial-gradient(black, transparent);
+    /* background: repeating-radial-gradient(black, transparent 100px); */
+"><head><style>
 	* {
 		background-color: black;
 		color: aquamarine;
+
 	}
+
+	video:-webkit-full-page-media {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    max-height: 100%;
+    max-width: 100%;
+    margin: auto;
+}
+video {
+    object-fit: contain;
+}
 </style>
 	<title></title>
 </head>
 <body>
 <h1> Kitne Asni Se nahi 143 </h1>
 <a href="143.html" title=""><h5> Next😃😃😃</h5></a>
-<iframe src="buggu.mp4" frameborder="0" width="320" height="320" allow="autoplay" frameborder="0"></iframe>
-</body>
-</html>
+<iframe src="buggu.mp4" frameborder="0" width="320" height="320" allow="autoplay"></iframe>
+
+</body></html>
