--- a/bolo.html
+++ b/bolo.html
@@ -1,4 +1,7 @@
-<html width="device-width" height=""><head>
+<html width="device-width" height="" style="
+    width: 100vh;
+    height: 100vh;
+"><head>
 	<script>[
 		{
 		  "url": "file:///C:/Users/HP/Desktop/ss/bolo.html",
@@ -20,10 +23,17 @@
 	<title>Bolo Kush toh</title>
 
 </head>
-<body>
-	<h1> Bolo na Kush toh bolo na😴😴😴</h1>
+<body style="
+    color: #d12b2b;
+    font-size: 4vh;
+    background: #7b0f82;
+">
+	<h1 style="
+    font-size: 5vh;
+"> Bolo na Kush toh bolo na😴😴😴</h1>
 	<a href="Love.html" title="love"><h2> 143🥱🥱🥱</h2></a>
 	<iframe src="phone.mp4" width="600pc" height="600pc" allow="autoplay" frameborder="0"></iframe>
+	<iframe src="Teri Wo Bate Wo Chahat Ki Kasme Female Version _ Sad Love Story ( 256kbps cbr ).mp3" frameborder="0"></iframe>
 
-
+<h1>helo</h1>
 </body></html>
