--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
 	}
 	::selection {
 		background : red;
-		color : red;
-	}
+		color : red; }
+        .field {
+            background :#03c08c;
+            mix-blend-mode: difference;
+        }
+       .btn-layer {
+           background :#ff2ec8;
+           mix-blend-mode: color-burn;
+       }
+
 </style>
 </head>
 <body>
@@ -28,8 +36,8 @@
     font-size: 3pc;
     color: aliceblue;
 ">What is Your Name ?</label>
-
-				<br>
+<select name="Select" id=""></select>
+			<option value="Eng"></option>	<br>
 			
 				<button><input type="text" name="Name" value="" placeholder="Person" maxlength="10" required="" minlength="6" style="
     font-size: 2pc;
@@ -69,15 +77,17 @@
 	</div>
 
 <h6 style="
+mix-blend-mode: difference;
     width: 500px;
     font-weight: 900;
     font-size: 2pc;
-    background: black;
+    background: #01319b;
     color: aliceblue;
 "> WEBSITE COPYRIGHT :UNDER SECTION 2007 THIS WEBSITE ONLY for FAIR USE This Website is 100% Secure</h6>
 
 <video width="" height="" allow="autoplay" autoplay="" style="
-    background: #778129;
+    background: #ff1414;
+    mix-blend-mode: overlay;
     margin: 12vh;
     background-size: cover;
     border: azure;
@@ -91,5 +101,9 @@
 	<source src="pasand.mp4" type="video/mp4" allow="autoplay">
 </video>
 
-<h2> This is Optimized for pc Not For Android</h2>
+<h2 style="
+    text-orientation: inherit;
+    mix-blend-mode: color-burn;
+    color: floralwhite;
+"> This is Optimized for pc Not For Android</h2>
 </body></html>
