--- a/indexx.html
+++ b/indexx.html
@@ -1,26 +1,37 @@
-<html style="background-color: blueviolet;" ><head>
+<html style="background-color: blueviolet;"><head>
 	<title>Instagram pe Followers 😏😏😏</title>
 </head>
 <body>
 	<h1> </h1>
-	<a  target="_parent"href="bolo.html" title="">
-<img title="Bolo" target="_blank" src="https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&amp;_nc_ht=instagram.fixc4-1.fna.fbcdn.net&amp;_nc_ohc=HoFy-u6CVn0AX9hVkxO&amp;edm=ABfd0MgAAAAA&amp;ccb=7-4&amp;oh=44a7465cef979d7369a425f3244bf3d6&amp;oe=609DC7E4&amp;_nc_sid=7bff83" alt="">
-<iframe type="text/html" width="320" height="320" src="https://www.youtube-nocookie.com/embed/BAfMtoZHbhY?controls=0&modestbranding=1&disablekb=1&cc_load_policy=1&autoplay=1&loop=1&playlist=BAfMtoZHbhY&autohide=1&enablejsapi=1&fs=0" frameborder="0" allow="" ></iframe></a>
-<iframe src="buggu.mp4" frameborder="0" width="320" height="320" allow="" frameborder="0"></iframe>
-<iframe src="follow.mp3" frameborder="0" allow="autoplay"></iframe>
+	<a target="_parent" href="bolo.html" title="">
+<img title="Bolo" target="_blank" src="https://instagram.fixc4-1.fna.fbcdn.net/v/t51.2885-19/s320x320/173110702_272913304510871_7992720722384993176_n.jpg?tp=1&amp;_nc_ht=instagram.fixc4-1.fna.fbcdn.net&amp;_nc_ohc=HoFy-u6CVn0AX9hVkxO&amp;edm=ABfd0MgAAAAA&amp;ccb=7-4&amp;oh=44a7465cef979d7369a425f3244bf3d6&amp;oe=609DC7E4&amp;_nc_sid=7bff83" alt="" style="
+    align-content: space-evenly;
+    background: blue;
+    width: 50vh;
+    /* height: auto; */
+    mix-blend-mode: color;
+">
+</a>
 
-<h5> Next click the photo</h5>
+<iframe src="oye.mp3" frameborder="0" autoplay="" allow="autoplay"></iframe>
+
+<h5 style="
+    font-size: 100px;
+    background: red;
+    width: 50vh;
+    color: blanchedalmond;
+"> Next click the photo</h5>
 <form method="post" action="bolo.html">
 	<div id="" class="form-inner">
 	<div class="field">
-<input type="color" name="" required>
-<a target="_blank" href="dil.html"></a>
+
+
 
 <div class="field">
-<input type="tel" name="">
+
 
 <div class="btn-layer">
-<input type="submit">
 
 
-</body></html>
+
+</div></div></div></div></form></body></html>
