--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ border: 2px 2px solid #000000;
 </style>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-<body>
+<body data-new-gr-c-s-check-loaded="14.1008.0" data-gr-ext-installed="">
 	<h3 id="h1" style="
     width: 500px;
     background: rgb(193 247 176);
@@ -97,7 +97,7 @@ border: 2px 2px solid #000000;
 			<option style="background-color: #00d335;" value="Eng">Favourite</option>	
             <option value="Sub">Nice</option>
 			</select>
-				<button id="btn1"><input id="input1" type="text" class="quantumWizTextinputPaperinputInput exportInput" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-labelledby="i11" aria-describedby="i12 i13" dir="auto" data-initial-dir="auto" data-initial-value="" badinput="false"value="" placeholder="Person" maxlength="10" required="" minlength="6"  style="
+				<button id="btn1"><input id="input1" type="text" class="quantumWizTextinputPaperinputInput exportInput" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-labelledby="i11" aria-describedby="i12 i13" dir="auto" data-initial-dir="auto" data-initial-value="" badinput="false" value="" placeholder="Person" maxlength="10" required="" minlength="6" style="
     font-size: 2pc;
     background: white;
     color: #6f2893;
@@ -116,7 +116,11 @@ border: 2px 2px solid #000000;
 "> Email </label>
 					<br>
 					
-					<input type="email" name="email"class="quantumWizTextinputPaperinputInput exportInput" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-labelledby="i5" aria-describedby="i6 i7" dir="auto" data-initial-dir="auto" data-initial-value=""><input type="reset" style="
+					<input type="email" name="email" class="quantumWizTextinputPaperinputInput exportInput" jsname="YPqjbf" autocomplete="off" tabindex="0" aria-labelledby="i5" aria-describedby="i6 i7" dir="auto" data-initial-dir="auto" data-initial-value="" style="
+    font-size: 30px;
+    background: aliceblue;
+    color: #000000;
+"><input type="reset" style="
     background: #2398ff;
     font-size: 20px;
 ">
@@ -132,7 +136,7 @@ border: 2px 2px solid #000000;
 					</div>
 				</div>
 			</div>
-		</form>
+		
 
 	</div>
 
@@ -298,4 +302,4 @@ h1
 		console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
 	}
 	// ]]>
-</script></body></html>
+</script></div></form></div></body></html>
